--- a/packages/twenty-docker/.env
+++ b/packages/twenty-docker/.env
@@ -1,9 +1,9 @@
 TAG=latest
 
 PG_DATABASE_USER=postgres
-PG_DATABASE_PASSWORD=cts@DB2025
+PG_DATABASE_PASSWORD=
 PG_DATABASE_HOST=localhost
-PG_DATABASE_PORT=5433
+PG_DATABASE_PORT=
 #REDIS_URL=redis://redis:6379
 
 SERVER_URL=http://localhost:3000
